Fixed layout issues

--- a/src/main/res/layout/dialog_register_device.xml
+++ b/src/main/res/layout/dialog_register_device.xml
@@ -11,6 +11,8 @@
         android:id="@+id/editNamespace"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="textUri"
+        android:singleLine="true"
         android:hint="@string/hint_namespace"/>
 </RelativeLayout>
 
